<resources>
    <!-- Main -->
    <string name="app_name">TodoIt</string>
    <string name="app_title_text">Todo.iT</string>
    <string name="slogan_text">Track iT, finish iT!</string>
    <string name="list_view_title_text">Task List</string>
    <string name="calender_title_text">Calendar</string>

    <!-- Menu Bar -->
    <string name="home_icon_description">Home icon</string>
    <string name="calendar_icon_description">Calendar icon</string>
    <string name="list_icon_description">list icon</string>
    <string name="user_icon_description">User profile icon</string>
    <string name="add_icon_description">Add icon</string>

    <!-- Pinned Tasks -->
    <string name="pinned_tasks_section_header_text">Pinned Tasks</string>
    <string name="task_card_category_text">Category</string>
    <string name="task_card_title_text">Task Title</string>
    <string name="task_card_notes_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut…</string>
    <string name="task_card_date_and_time_text">Date and Time</string>

    <!-- Upcoming Tasks -->
    <string name="upcoming_tasks_section_header_text">Upcoming Tasks</string>
    <string name="status_text">Status</string>

    <!-- Task Row Item -->
    <string name="category_image_view_description">Category icon</string>
    <string name="status_image_view_description">Status icon</string>
    <string name="task_title_text">Task Title</string>
    <string name="task_date_text">July 20, 2024</string>
    <string name="task_created_date_text">July 19, 2024</string>

    <!-- List View -->
    <string name="all_tasks_section_header_text">All Tasks</string>

    <!-- Calendar View -->
    <string name="tasks_section_header_text">Tasks</string>

    <!-- Forms -->
    <string name="add_task_title_text">Add task</string>
    <string name="name_edit_text_hint">Name</string>
    <string name="category_label_text">Category</string>
    <string name="category_sample_text">Work</string>
    <string name="notes_edit_text_hint">Notes</string>
    <string name="due_date_label_text">Due Date</string>
    <string name="select_date_button_text">Select date</string>
    <string name="select_a_date_label_text">Please select a date</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="update_button_text">Update</string>
    <string name="edit_task_title_text">Edit task</string>
    <string name="status_label_text">Status</string>
    <string name="name_sample_edit_text">Complete Assignment 4</string>
    <string name="notes_sample_edit_text">Draft design and code for Todo app. Ensure that you follow the guidelines and submit on time.</string>

    <!-- User Profile -->
    <string name="user_profile_title_text">User Profile</string>
    <string name="student_name_label_text">Student Name</string>
    <string name="student_name_text">Basil Barnaby</string>
    <string name="student_number_label_text">Student Number</string>
    <string name="student_number_text">200540109</string>
    <string name="app_name_label_text">App name</string>
    <string name="version_label_text">Version</string>
    <string name="version_text">0.1</string>
    <string name="description_label_text">Description</string>
    <string name="description_text">An Android application for organizing and managing tasks. Users can add, edit, delete, and categorize tasks, view upcoming and pinned tasks, * select due dates, and navigate between different activities.</string>
    <string name="actions_label_text">Actions</string>
    <string name="view_edit_activity_button_text">View Edit Activity</string>
    <string name="view_details_activity_button_text">View Details Activity</string>

    <!-- Details -->
    <string name="notes_label_text">Notes</string>
    <string name="sample_status_text">In progress</string>
    <string name="created_label_text">Created</string>
    <string name="sample_notes_text">Complete the design document and code implementation for the Todo app, ensuring all features are functional and meet the project requirements.</string>
    <string name="delete_icon_description">Delete task</string>
    <string name="edit_icon_description">Edit task</string>
    <string name="due_date_not_set_text">Not set</string>
    <string name="not_started_text">Not started</string>
    <string name="in_progress_text">In progress</string>
    <string name="complete_text">Completed</string>
    <string name="back_icon_description">Go back to the previous screen</string>
    <string name="pin_icon_icon_description">Pin icon</string>
    <string name="not_started_icon_description">Not started icon</string>
    <string name="in_progress_icon_description">"In progress icon "</string>
    <string name="complete_icon_description">Complete icon</string>
</resources>