<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/menuBarLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_bar_layout_height"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_home"
            android:contentDescription="@string/home_icon_description"
            android:background="@null"/>

        <ImageButton
            android:id="@+id/calendarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_calendar"
            android:contentDescription="@string/calendar_icon_description"
            android:background="@null"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/listButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_list"
            android:contentDescription="@string/list_icon_description"
            android:background="@null"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/addTaskButton"
        android:layout_width="@dimen/add_button_size"
        android:layout_height="@dimen/add_button_size"
        android:layout_gravity="center"
        android:background="@drawable/add_button_bg"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/add_icon_description"
        android:padding="16dp"/>

    <ImageButton
        android:id="@+id/userProfileButton"
        style="@style/circular_icon"
        android:layout_width="@dimen/user_profile_button_size"
        android:layout_height="@dimen/user_profile_button_size"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="@dimen/user_profile_button_margin_end"
        android:src="@mipmap/ic_user"
        android:contentDescription="@string/user_icon_description"/>
</FrameLayout>
