<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/task_card_width"
    android:layout_height="@dimen/task_card_height"
    app:cardCornerRadius="@dimen/task_card_corner_radius"
    app:cardElevation="@dimen/task_card_elevation"
    android:layout_marginEnd="30dp">

    <LinearLayout
        android:id="@+id/taskCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/emerald"
        android:orientation="vertical"
        android:padding="@dimen/task_card_layout_padding">

        <TextView
            android:id="@+id/taskCardCategory"
            style="@style/task_card_category_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_card_category_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/taskCardTitle"
            style="@style/task_card_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/task_card_title_text_margin_top"
            android:text="@string/task_card_title_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/taskCardNotes"
            style="@style/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/task_card_body_text_margin_top"
            android:text="@string/task_card_notes_text"/>

        <TextView
            android:id="@+id/taskCardDate"
            style="@style/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/task_card_body_text_margin_top"
            android:text="@string/task_card_date_and_time_text"
            android:alpha="@dimen/text_alpha" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
