<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_dark"
    android:paddingTop="@dimen/main_padding_y"
    android:paddingBottom="0dp"
    android:paddingStart="@dimen/main_padding_x"
    android:paddingEnd="@dimen/main_padding_x"
    tools:context=".AddTaskActivity">

    <LinearLayout
        android:id="@+id/headerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/header_layout_padding_bottom"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/listViewTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="@dimen/activity_title_text_height"
            android:fontFamily="@font/montserrat"
            android:text="@string/add_task_title_text"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_title_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/formLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/menuBarLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLinearLayout">

        <EditText
            android:id="@+id/nameEditTextView"
            style="@style/custom_text_input"
            android:autofillHints="@string/name_edit_text_hint"
            android:inputType="text"
            android:background="@drawable/input_bg"
            android:hint="@string/name_edit_text_hint" />

        <TextView
            android:id="@+id/categoryLabelTextView"
            style="@style/label_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/label_text_margin_bottom"
            android:text="@string/category_label_text" />

        <EditText
            android:id="@+id/categoryEditTextView"
            style="@style/custom_text_input"
            android:autofillHints="@string/name_edit_text_hint"
            android:inputType="text"
            android:background="@drawable/input_bg"
            android:hint="@string/name_edit_text_hint"
            android:text="@string/category_sample_text"/>

        <EditText
            android:id="@+id/notesEditTextView"
            style="@style/custom_textarea"
            android:autofillHints="@string/name_edit_text_hint"
            android:background="@drawable/input_bg"
            android:hint="@string/notes_edit_text_hint"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:id="@+id/dueDateToggleLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dueDateLabelTextView"
                style="@style/label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/due_date_label_text" />

            <Switch
                android:id="@+id/dueDateSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Switch" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuBarLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <include
            android:id="@+id/menuBar"
            layout="@layout/menu_bar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
