<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_dark"
    android:paddingTop="@dimen/main_padding_y"
    android:paddingBottom="0dp"
    android:paddingStart="@dimen/main_padding_x"
    android:paddingEnd="@dimen/main_padding_x"
    tools:context=".ListActivity">

    <LinearLayout
        android:id="@+id/headerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/header_layout_padding_bottom"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/listViewTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="@dimen/app_title_text_height"
            android:fontFamily="@font/montserrat"
            android:text="@string/list_view_title_text"
            android:textColor="@color/white"
            android:textSize="@dimen/app_title_text_size" />

        <SearchView
            style="@style/custom_search_view"
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/search_view_margin_top"
            android:background="@drawable/search_input_bg"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tasksLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/menuBarLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLinearLayout">

        <LinearLayout
            android:id="@+id/upcomingTasksSectionHeaderLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/upcomingTasksSectionHeaderTextView"
                style="@style/section_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all_tasks_section_header_text" />

            <TextView
                android:id="@+id/statusTextView"
                style="@style/task_card_category_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status_text"
                android:textAlignment="textEnd" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasksRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/recycler_view_margin_top"
            tools:listitem="@layout/task_row_item" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuBarLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <include
            android:id="@+id/menuBar"
            layout="@layout/menu_bar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
